[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://opponent/opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 527.058, 9.86995 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 518.081, 11.7576 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.3977, 328.044 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.68176
margin_top = -1.68179
margin_right = 1.68176
margin_bottom = -1.68176
color = Color( 0.0784314, 0.129412, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
margin_left = 333.771
margin_top = 198.407
margin_right = 415.771
margin_bottom = 225.407
text = "test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdownlabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.71326
margin_top = -236.652
margin_right = -4.71326
margin_bottom = -2.11127
text = "Countdown"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
margin_left = 661.0
margin_top = 188.0
margin_right = 688.0
margin_bottom = 223.0
text = "test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 31.4274, 303.815 )

[node name="wall top" type="StaticBody2D" parent="."]
position = Vector2( -5.24066, -9.30087 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall top"]
position = Vector2( 522.828, 0 )
shape = SubResource( 1 )

[node name="wall bottom" type="StaticBody2D" parent="."]
position = Vector2( 7.41493, 1.3378 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall bottom"]
position = Vector2( 511.58, 611.631 )
shape = SubResource( 2 )

[node name="opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 955.201, 222.754 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 511.212, 293.199 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -39.8693, 306.327 )
shape = SubResource( 3 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 1063.85, 296.766 )
shape = SubResource( 3 )

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="CountDownTimer" to="." method="_on_CountDownTimer_timeout"]
